{
    "version": 1,
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Janken",
            "id": "29578dc3-6963-4303-b106-a7b89ec733ef",
            "actions": [
                {
                    "name": "LeftUpRock",
                    "type": "Button",
                    "id": "d61b2fea-e352-401f-aec7-a005c896c538",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftUpScissors",
                    "type": "Button",
                    "id": "49affd24-9faf-4515-b1a0-ee879801d305",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftUpPaper",
                    "type": "Button",
                    "id": "6b0bf0b5-12c7-45b2-b2d8-3360bc541459",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftDownRock",
                    "type": "Button",
                    "id": "8d25b24d-7e98-4096-84d0-97fee8803d8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftDownScissors",
                    "type": "Button",
                    "id": "4c261c6f-69e9-4789-9b7f-7e6a6ab86d0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftDownPaper",
                    "type": "Button",
                    "id": "0e36e019-3509-4c6e-a254-6072add8a958",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightUpRock",
                    "type": "Button",
                    "id": "d8629559-0fec-43fa-8349-ea14e6dc7dc0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightUpScissors",
                    "type": "Button",
                    "id": "039c624b-ded2-487a-b232-e71e5d6efa9c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightUpPaper",
                    "type": "Button",
                    "id": "3abff164-01e6-458d-833f-757211c906b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDownRock",
                    "type": "Button",
                    "id": "89f77df0-81aa-49f5-aa12-f71745a9275c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDownScissors",
                    "type": "Button",
                    "id": "8b42bec8-0796-42ca-81bf-6be30d34b2eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDownPaper",
                    "type": "Button",
                    "id": "fdeca27b-5f64-41fd-9ea8-8594c46251a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "348d3fb9-3d99-4703-8936-b76437471ad2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUpRock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "660f795e-3298-47d2-8d0f-1c169cdbfb21",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUpScissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "426d7fa0-df59-4b11-897e-48ef674cd44c",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUpPaper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37ff50fa-7391-4919-83e3-2067acdb7aa8",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDownRock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a7ea608-af0a-48dd-a0cf-d3c60b3703bf",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDownScissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f34af8-902a-4a46-a000-810b45ecbc05",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDownPaper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0716f56e-1e7d-404d-b524-352a0b41ef3b",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUpRock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52a23c9f-924f-4aab-83b6-216635bdcea3",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUpScissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32a950f1-8fad-40c2-a447-0f7f15284154",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUpPaper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a7a08bf-902e-4abb-9435-adaaca050bb1",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDownRock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cae54a2-7f7f-4dab-8a73-f52af1b44d08",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDownScissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6408fea-3069-4134-ad55-5b5bc0f71348",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDownPaper",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}